# Mangatan

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  m-extension-server-anime-group-filter.patch  m-extension-server-json-nullability.patch  pubspec.yaml
.github/ISSUE_TEMPLATE/: config.yml  report_issue.yml  request_feature.yml
.github/workflows/: private_release.yml  release.yml  update_sideloading_source.yml
assets/: yomitan_language_bundle.js
assets/hoshi_popup/: README.md  popup.css  popup.js
assets/yomitan_transforms/: ar.js  de.js  el.js  en.js  eo.js  es.js  eu.js  fr.js  ga.js  grc.js  ka.js  ko.js  la.js  sga.js  sq.js  tl.js  yi.js
docs/: chimahon_sync_compatibility.md  linux_google_drive_sync.md  mangatan_epub_blob_protocol.md  webdav_chimahon_sync.md
docs/handoffs/: chimahon_categories.md  chimahon_macos_linux_build_verification.md
go/: build_go.sh
ios/Runner/: Info.plist
lib/: main.dart
lib/eval/mihon/: bridge_http_client.dart  bridge_protocol.dart  image_proxy.dart  service.dart
lib/eval/model/: m_chapter.dart  source_preference.dart
lib/l10n/: app_ar.arb  app_as.arb  app_de.arb  app_en.arb  app_es.arb  app_es_419.arb  app_fr.arb  app_id.arb  app_it.arb  app_ja.arb  app_pt.arb  app_pt_BR.arb  app_ru.arb  app_th.arb  app_tr.arb  app_zh.arb
lib/models/: chapter.dart  chapter.g.dart  epub_book_progress.dart  epub_book_progress.g.dart  manga.dart  manga.g.dart  settings.dart  settings.g.dart  sync_preference.dart  sync_preference.g.dart
lib/modules/anime/: anime_player_view.dart
lib/modules/dictionary/: dictionary_lookup_screen.dart
lib/modules/main_view/: auto_sync_timer_controller.dart  main_screen.dart
lib/modules/mining/: reader_lookup_trigger.dart
lib/modules/more/: more_screen.dart
lib/modules/novel/: novel_reader_controller_provider.dart  novel_reader_controller_provider.g.dart  novel_reader_progress.dart  novel_reader_view.dart
lib/modules/widgets/: category_selection_dialog.dart  custom_draggable_tabbar.dart  desktop_back_navigation_handler.dart  manga_image_card_widget.dart
lib/providers/: storage_provider.dart
lib/router/: router.dart  router.g.dart
lib/services/: category_service.dart  epub_chapter_metadata.dart  epub_manga.dart  epub_reader_asset_server.dart  extension_catalog_reconciler.dart  fetch_item_sources.dart  fetch_item_sources.g.dart  fetch_sources_list.dart  get_chapter_pages.dart  get_chapter_pages.g.dart  get_detail.dart  get_detail.g.dart  get_html_content.dart  get_html_content.g.dart  get_latest_updates.dart  get_latest_updates.g.dart  get_popular.dart  get_popular.g.dart  get_video_list.dart  get_video_list.g.dart  local_source_browser.dart  m_extension_server.dart  reconcile_mihon_sources.dart  search.dart  search.g.dart  sync_server.dart  sync_server.g.dart  uninstall_extension.dart  webview_url.dart
lib/services/anime_extractors/: dood_extractor.dart
lib/services/download_manager/: downloaded_manga_artifact.dart
lib/services/hoshidicts/: dictionary_languages.dart  dictionary_storage.dart  hoshidicts_backend.dart  kiwi_korean_analyzer.dart  korean_language_parser.dart  yomitan_language_parser.dart
lib/services/mining/: anime_sentence_audio_service.dart  anki_audio_service.dart  anki_card_builder.dart  anki_connect_service.dart  anki_markers.dart  chrome_lens_ocr.dart  dictionary_profile.dart  dictionary_profile_resolver.dart  jimaku_service.dart  mining_models.dart  mining_preferences.dart  mokuro_extension_ocr.dart  mokuro_parser.dart  mokuro_sidecar.dart  mokuro_sidecar_path.dart  ocr_block_merger.dart  ocr_models.dart  profile_ocr_language.dart  screen_ai_ocr.dart
lib/services/sync/: chimahon_app_settings_adapter.dart  chimahon_backup_fingerprint.dart  chimahon_backup_semantic_diff.dart  chimahon_category_payload_adapter.dart  chimahon_deferred_payload_store.dart  chimahon_feed_identity.dart  chimahon_generic_collection_safety_audit.dart  chimahon_local_chapter_overlay_service.dart  chimahon_local_chapter_policy.dart  chimahon_local_intent_safety_audit.dart  chimahon_local_sync_projection_service.dart  chimahon_manga_title_adapter.dart  chimahon_manual_restore_adapter.dart  chimahon_manual_restore_category_adapter.dart  chimahon_media_child_projection_proof.dart  chimahon_media_parent_projection_proof.dart  chimahon_media_safety_audit.dart  (+43 more)
lib/utils/: chapter_recognition.dart  chimahon_novel_identity.dart  discord_rpc.dart  extension_language_defaults.dart  language.dart  source_lookup.dart  utils.dart
linux/: mangayomi.desktop  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist  MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
packaging/arch/: PKGBUILD
proto/: BackupAnime.proto  BackupCategory.proto  BackupExtensionRepos.proto  BackupFeed.proto  BackupManga.proto  BackupMihon.proto  BackupNovel.proto  BackupPreference.proto  BackupSavedSearch.proto  BackupStatistics.proto  BackupTracking.proto
rust/: Cargo.toml  build.rs
rust/examples/: epub_audit.rs
rust/native/hoshidicts_bridge/: CMakeLists.txt  hoshidicts_c_api.cpp  hoshidicts_c_api.h
rust/src/: frb_generated.rs
rust_builder/ios/: rust_lib_mangayomi.podspec
rust_builder/macos/: rust_lib_mangayomi.podspec
scripts/: build_macos.sh  package_linux_appimage.sh
test/models/: reader_settings_test.dart
test/services/: category_service_test.dart  epub_chapter_metadata_test.dart  epub_manga_test.dart  epub_reader_asset_server_test.dart  extension_catalog_reconciler_test.dart  fetch_item_sources_test.dart  get_html_content_test.dart  local_source_browser_test.dart  webview_url_test.dart
test/utils/: chapter_recognition_test.dart  extension_language_defaults_test.dart  language_test.dart  source_lookup_test.dart
tool/: chimahon_backup_fingerprint.dart  chimahon_drive_diagnostic.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp  screen_ai_bridge.cpp
(+301 files in other folders)
